debug font size issue on mobile

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -31,7 +31,7 @@
     margin: 0px;
     border-color: #fff;
     color: #fff;
-    font-size: 21px;
+    font-size: 20px;
     text-shadow: 1px 1px 9px #000, 1px 1px 1px #000;
     text-align: center;
     font-style: italic;
